Can take control of the fish using up, down, left, right arrows. Added methods for components to listen for key events. Fixed z-index bug with title

--- a/css/app.less
+++ b/css/app.less
@@ -15,7 +15,7 @@ html {
 	
 	width: 137px;
 	height: 95px;
-	z-index: 999;
+	z-index: -10;
 
 	position: fixed;
 }
@@ -42,7 +42,7 @@ html {
 	color: white;
 	font-size: 28pt;
 	font-family: arcadeclassic;
-	z-index: 999999999;
+	z-index: 10000;
 	float: right;
 }
 
